chore: update config

--- a/conf/rosalind_cdc.config
+++ b/conf/rosalind_cdc.config
@@ -1,6 +1,6 @@
 /*
 ==========================================================================================
-    Nextflow config file for Rosalind HPC at CDC
+    Nextflow config file for HPC at CDC
 ==========================================================================================
     This is a configuration file to run Nextflow pipeline on CDC's Sun Grid Engine, and is 
     configured to optimally schedule jobs to various queues and handles resource limits, 
@@ -9,6 +9,7 @@
     are defined below, and you should change them if necessary. This config file should be 
     passed to the Nextflow run command using -C, which will overwrite default configs.
 ----------------------------------------------------------------------------------------
+version 1.0.0
 */
 
 /*
@@ -18,32 +19,15 @@
 */
 
 params {
-  config_profile_description = 'Rosalind HPC @ CDC'
+  config_profile_description = 'HPC @ CDC'
   config_profile_contact = 'OAMD'
   config_profile_url = 'https://info.biotech.cdc.gov/info/'
   custom_config_version = 'master'
-
-  // Below line will result in an error if there is no --outdir parameter in your workflow.
-  //tracedir = "${params.outdir}/pipeline_info"
-  
-  // Ignore validation schema params
-  //schema_ignore_params = "validationSchemaIgnoreParams"
 
   // Default resource parameters. Expecting to be overwritten.
   max_memory                 = '128.GB'
   max_cpus                   = 16
   max_time                   = '240.h'
-}
-
-/*
-==========================================================================================
-    Environment variables
-==========================================================================================
-*/
-
-env {
-  // Sets options for the Java runtime instance.
-  NFX_OPTS="-Xms=512m -Xmx=8g"
 }
 
 /*
@@ -116,7 +100,7 @@ profiles {
       clusterOptions = { "-l gpu=1" }
     }
   }
-  rosalind {
+  scicomp_rosalind {
     executor {
       name = 'sge'
       queueSize = 12
@@ -126,9 +110,8 @@ profiles {
     process {
       // Executor information
       executor = 'sge'
-      //jobName = { "$task.name - $task.hash" }
       penv = 'smp'
-      queue = { task.time <= 4.h ? 'short.q' : task.time > 7.day ? 'long.q' : 'all.q' }
+      queue = { task.time <= 4.h ? 'short.q' : task.time > 3.day ? 'long.q' : 'all.q' }
 
       // Disable docker by default
       docker.enabled = false
@@ -157,7 +140,6 @@ profiles {
     process {
       // Executor information
       executor = 'sge'
-      //jobName = { "$task.name - $task.hash" }
       penv = 'smp'
       queue = 'testing.q'
 
@@ -171,49 +153,33 @@ profiles {
 
       // Set h_vmem option for qsub submissions. +20 memory to h_vmem prevents memory allocation errors.
       clusterOptions = { "-l h_vmem=${(check_max((task.memory.toGiga())+20), 'memory').toString().replaceAll(/[\sB]/,'')}G" }
-
-      // Error handling - increases resources on each retry.
-      errorStrategy = { task.exitStatus in [143,137,104,134,139,140,71,255] ? 'retry' : 'ignore' }
-      maxRetries    = 3
-      maxErrors     = '-1'
     }
   }
+  debug {
+    // Set generic debug settings
+    dumpHashes = true
+    cleanup = false
+    nextflow.enable.configProcessNamesValidation = true
+
+    process {
+      // Enable tracing for shell processes
+      shell = ['/bin/bash', '-x']
+      // Print hostname for debugging
+      beforeScript = 'echo $HOSTNAME'
+    }
+
+    env {
+      // Enable most verbose tracing
+      NXF_DEBUG = '3'
+    }
+
+    // Error handling - increases resources on each retry.
+    errorStrategy = { task.exitStatus in [143,137,104,134,139,140,71,255] ? 'retry' : 'ignore' }
+    maxRetries    = 3
+    maxErrors     = '-1'
+
+  }
 }
-
-/*
-==========================================================================================
-    Capture exit codes from upstream processes when piping
-==========================================================================================
-*/
-
-//process.shell = ['/bin/bash', '-euo', 'pipefail']
-
-// Using standard shell configuration may help prevent certain errors
-process.shell = ['/bin/bash']
-
-/*
-==========================================================================================
-    Nextflow Metrics & Reports
-==========================================================================================
-*/
-//def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
-
-//timeline {
-//   enabled = true
-//    file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
-//}
-//report {
-//    enabled = true
-//    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
-//}
-//trace {
-//    enabled = true
-//    file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
-//}
-//dag {
-//    enabled = true
-//    file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.html"
-//}
 
 /*
 ==========================================================================================
@@ -229,7 +195,7 @@ def check_max(obj, type) {
             else
                 return obj
         } catch (all) {
-            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
+            println "Updating max_memory: '${params.max_memory}' to $obj based on available resources"
             return obj
         }
     } else if (type == 'time') {
@@ -239,14 +205,14 @@ def check_max(obj, type) {
             else
                 return obj
         } catch (all) {
-            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
+            println "Updating max_time: '${params.max_time}' to $obj based on available resources"
             return obj
         }
     } else if (type == 'cpus') {
         try {
             return Math.min( obj, params.max_cpus as int )
         } catch (all) {
-            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+            println "Updating max_cpus: '${params.max_cpus}' to $obj based on available resources"
             return obj
         }
     }
