test: add bam test to handle the new freyja entry

--- a/nextflow.config
+++ b/nextflow.config
@@ -147,6 +147,7 @@ profiles {
     rosalind        { includeConfig   'conf/cdc_dev.config'}
     test_illumina   { includeConfig   'conf/test_illumina.config' }
     test_ont        { includeConfig   'conf/test_ont.config'}
+    test_bam        { includeConfig   'conf/test_bam.config'}
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
