chore: rename scicomp config

--- a/conf/test_ont.config
+++ b/conf/test_ont.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run CDCgov/aquascope -profile test_ont,<docker/singularity>,rosalind (usage of the profile "rosalind" only for CDC-users)
+        nextflow run CDCgov/aquascope -profile test_illumina,<docker/singularity>,scicomp_rosalind (usage of the profile is for only CDC-users)
 
 ----------------------------------------------------------------------------------------
 */
