chore: move to local, add bed lookup

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     fasta                      = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
     gff			               = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
     gff3                       = "${projectDir}/assets/references/SARS-CoV-2.reference.gff3"
+    bed                        = 
 
     // Freyja barcodes and metadata
     //freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
@@ -144,7 +145,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
     }
-    rosalind        { includeConfig   'conf/cdc_dev.config'}
+    scicomp_rosalind        { includeConfig   'conf/scicomp.config'}
     test_illumina   { includeConfig   'conf/test_illumina.config' }
     test_ont        { includeConfig   'conf/test_ont.config'}
     test_bam        { includeConfig   'conf/test_bam.config'}
