--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -10,5 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: nf-core/setup-nextflow@v1
-      - uses: eWaterCycle/setup-singularity@v7
+      - uses: singularityhub/install-singularity@main
       - run: nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
