--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -12,3 +12,5 @@ jobs:
       - uses: nf-core/setup-nextflow@v1
       - uses: singularityhub/install-singularity@main
       - run: nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
+      - run: nextflow run main.nf --resume -profile singularity,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
+      - run: nextflow run main.nf --resume -profile singularity,test_bams -entry FREYJA_ONLY --outdir ~/projects/tmp/freyja
