--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -13,4 +13,4 @@ jobs:
       - uses: singularityhub/install-singularity@main
       - run: nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
       - run: nextflow run main.nf --resume -profile singularity,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
-      - run: nextflow run main.nf --resume -profile singularity,test_bams -entry FREYJA_ONLY --outdir ~/projects/tmp/freyja
+      - run: nextflow run main.nf --resume -profile singularity,test_bam -entry FREYJA_ONLY --outdir ~/projects/tmp/freyja
