--- a/nextflow.config
+++ b/nextflow.config
@@ -115,6 +115,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        docker.registry        = 'quay.io'
     }
     singularity {
         singularity.enabled    = true
