--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -1,29 +1,41 @@
 name: run_test_pipelines
+
 on:
   workflow_dispatch:
   push:
-   branches:
-    - main
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: nf-core/setup-nextflow@v1
-      - name: Setup Singularity
-        uses: singularityhub/install-singularity@main
-      - name: Singularity Illumina QUALITY_ALIGN
-        run: nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
-      - name: Singularity Illumina AQUASCOPE
-        run: nextflow run main.nf --resume -profile singularity,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
-      - name: Singularity Illumina FREYJA_ONLY
-        run: nextflow run main.nf --resume -profile singularity,test_bam -entry FREYJA_ONLY --outdir ~/projects/tmp/freyja
-      - name: Singularity ONT AQUASCOPE
-        run: nextflow run main.nf --resume -profile singularity,test_ont -entry AQUASCOPE --outdir ~/projects/tmp/ont
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-        with:
-          install: true      
-      - name: Docker Illumina AQUASCOPE
-        run: nextflow run main.nf --resume -profile docker,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
+        uses: docker/setup-qemu-action@v2  # Ensures multi-platform support if needed (optional)
+      
+      - name: Docker login (if required for pulling private images)
+        if: env.DOCKER_USERNAME && env.DOCKER_PASSWORD
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      - name: Install Nextflow
+        run: |
+          curl -s https://get.nextflow.io | bash
+          sudo mv nextflow /usr/local/bin/
+      
+      - name: Run Nextflow Illumina QUALITY_ALIGN with Singularity
+        uses: singularityhub/install-singularity@main
+      - run: |
+          nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
+      
+      - name: Run Nextflow Illumina AQUASCOPE with Singularity
+        run: |
+          nextflow run main.nf --resume -profile singularity,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
+
+      - name: Run Nextflow Illumina AQUASCOPE with Docker
+        run: |
+          nextflow run main.nf --resume -profile docker,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
