--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -1,21 +1,32 @@
 name: run_test_pipelines
+
 on:
   workflow_dispatch:
   push:
-   branches:
-    - main
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: nf-core/setup-nextflow@v1
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: Set up Docker
+        uses: docker/setup-qemu-action@v2  # Ensures multi-platform support if needed (optional)
+      
+      - name: Docker login (if required for pulling private images)
+        if: env.DOCKER_USERNAME && env.DOCKER_PASSWORD
         run: |
-          apt-get update
-          apt-get install -y docker.io
-          service docker start
-      - name: Docker Illumina AQUASCOPE
-        run: | 
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      - name: Install Nextflow
+        run: |
+          curl -s https://get.nextflow.io | bash
+          sudo mv nextflow /usr/local/bin/
+
+      - name: Run Nextflow Illumina AQUASCOPE with Docker
+        run: |
           nextflow run main.nf --resume -profile docker,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
