--- a/.github/workflows/test_pipeline.yaml
+++ b/.github/workflows/test_pipeline.yaml
@@ -12,21 +12,27 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v4  # Updated to the latest version supporting Node 20
       - name: Set up Docker
-        uses: docker/setup-qemu-action@v2  # Ensures multi-platform support if needed (optional)
-      
+        uses: docker/setup-qemu-action@v3  # Updated to the latest version supporting Node 20
       - name: Docker login (if required for pulling private images)
         if: env.DOCKER_USERNAME && env.DOCKER_PASSWORD
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      
       - name: Install Nextflow
         run: |
           curl -s https://get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin/
-
       - name: Run Nextflow Illumina AQUASCOPE with Docker
         run: |
           nextflow run main.nf --resume -profile docker,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
+      - name: Set up Singularity
+        uses: singularityhub/install-singularity@main
+      - name: Singularity Illumina QUALITY_ALIGN
+        run: nextflow run main.nf --resume -profile singularity,test_illumina -entry QUALITY_ALIGN --outdir ~/projects/tmp/illumina
+      - name: Singularity Illumina AQUASCOPE
+        run: nextflow run main.nf --resume -profile singularity,test_illumina -entry AQUASCOPE --outdir ~/projects/tmp/complete
+      - name: Singularity Illumina FREYJA_ONLY
+        run: nextflow run main.nf --resume -profile singularity,test_bam -entry FREYJA_ONLY --outdir ~/projects/tmp/freyja
+      - name: Singularity ONT AQUASCOPE
+        run: nextflow run main.nf --resume -profile singularity,test_ont -entry AQUASCOPE --outdir ~/projects/tmp/ont
