chore: ignore monochromeLogs

--- a/nextflow.config
+++ b/nextflow.config
@@ -52,7 +52,7 @@ params {
     // Schema validation default options
     validationFailUnrecognisedParams = false
     validationLenientMode            = true
-    validationSchemaIgnoreParams     = 'genomes,igenomes_base'
+    validationSchemaIgnoreParams     = 'genomes,igenomes_base,monochromeLogs'
     validationShowHiddenParams       = false
     validate_params                  = false
     enable_conda                     = false
