refact:added iontorrent test config

--- a/nextflow.config
+++ b/nextflow.config
@@ -150,6 +150,7 @@ profiles {
     test_illumina   { includeConfig   'conf/test_illumina.config' }
     test_ont        { includeConfig   'conf/test_ont.config'}
     test_bam        { includeConfig   'conf/test_bam.config'}
+    test_iontorrent { includeConfig   'conf/test_iontorrent.config' }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
