feat: added resourcelimits

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,14 @@
 // Global default params, used in configs
 params {
 
+    // Add new resource limits
+    resourceLimits = [
+        cpus: 32,
+        memory: 256.GB,
+        time: 24h
+
+    ]
+ 
     // Input options
     input                      = null
 
