--- a/conf/test_ont.config
+++ b/conf/test_ont.config
@@ -15,9 +15,9 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = 6.GB
-    max_time   = 6.h
+    cpus   = 2
+    memory = 6.GB
+    time   = 6.h
 
     // Input data
     input  = "${projectDir}/assets/samplesheet_test_ont.csv"
