feat:updated resources mgmt

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,17 +6,17 @@
 ----------------------------------------------------------------------------------------
 */
 
+// resource management limits
+process {
+  resourceLimits = [
+    cpus: 32,
+    memory: 256.GB,
+    time: 24.h
+  ]
+}
+
 // Global default params, used in configs
 params {
-
-    // Add new resource limits
-    resourceLimits = [
-        cpus: 32,
-        memory: 256.GB,
-        time: 24h
-
-    ]
- 
     // Input options
     input                      = null
 
@@ -203,4 +203,4 @@ manifest {
     doi             = ' '
 }
 
-}
+
