--- a/nextflow.config
+++ b/nextflow.config
@@ -97,6 +97,7 @@ try {
 } catch (Exception e) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
+singularity.registry  = 'quay.io'
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
