chore: remove check_max reference

--- a/conf/scicomp.config
+++ b/conf/scicomp.config
@@ -147,7 +147,7 @@ profiles {
       time = '8.h'
 
       // Set h_vmem option for qsub submissions. +20 memory to h_vmem prevents memory allocation errors.
-      clusterOptions = { "-l h_vmem=${(check_max((task.memory.toGiga())+20), 'memory').toString().replaceAll(/[\sB]/,'')}G" }
+      clusterOptions = { "-l h_vmem=${((task.memory.toGiga())+20).toString().replaceAll(/[\sB]/,'')}G" }
     }
   }
   debug {
