chore:adjusted resource management

--- a/nextflow.config
+++ b/nextflow.config
@@ -77,11 +77,11 @@ params {
 
 // Default publishing logic for pipeline
 process {
-  resourceLimits = [
-    cpus: 32,
-    memory: 256.GB,
-    time: 24.h
-  ]
+  // define mx resources limits 
+    cpus     = 32
+    memory   = '256.GB'
+    time     = '24.h'
+
    publishDir = [
         path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: params.publish_dir_mode,
