chore: set defaults, remove old max checks

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ params {
     fasta                      = "${projectDir}/assets/references/SARS-CoV-2.reference.fasta"
     gff			               = "${projectDir}/assets/references/SARS-CoV-2.reference.gff"
     gff3                       = "${projectDir}/assets/references/SARS-CoV-2.reference.gff3"
-    bed                        = 
+    bed                        = ""
 
     // Freyja barcodes and metadata
     //freyja_repeats             = 1000 //default, change it to at minimum 250 to run it faster
@@ -48,6 +48,7 @@ params {
     hook_url                   = null
     help                       = false
     version                    = null
+
     // Schema validation default options
     validationFailUnrecognisedParams = false
     validationLenientMode            = true
@@ -66,27 +67,6 @@ params {
     config_profile_url         = null
     config_profile_name        = null
     skip_multiqc               = false
-
-    // Max resource options
-    // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
-    max_cpus                   = 16
-    max_time                   = '240.h'
-
-}
-
-// Default publishing logic for pipeline
-process {
-  // define mx resources limits 
-    cpus     = 32
-    memory   = '256.GB'
-    time     = '24.h'
-
-   publishDir = [
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: params.publish_dir_mode,
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    ]
 }
 
 // Load base.config by default for all pipelines
