chore: set resourceLimits, default resources

--- a/conf/base.config
+++ b/conf/base.config
@@ -10,11 +10,10 @@
 
 process {
 
-    // TODO nf-core: Check the defaults for all processes
-    cpus   = { 1    * task.attempt, 'cpus'   }
-    memory = { 6.GB * task.attempt, 'memory' } 
-    time   = { 4.h  * task.attempt, 'time'   }
-
+    // Add defaults
+    cpus   = { 1      * task.attempt }
+    memory = { 6.GB   * task.attempt }
+    time   = { 4.h    * task.attempt }
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
     maxRetries    = 1
     maxErrors     = '-1'
