--- a/conf/scicomp.config
+++ b/conf/scicomp.config
@@ -25,9 +25,11 @@ params {
   custom_config_version = 'master'
 
   // Default resource parameters. Expecting to be overwritten.
-  memory                 = '128.GB'
-  cpus                   = 16
-  time                   = '240.h'
+  resourceLimits = [
+    cpus: 16,
+    memory: '128.GB',
+    time: '240.h'
+  ]
 }
 
 /*
