chore: set resourceLimits, default resources

--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -15,9 +15,11 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    cpus   = 2
-    memory = 6.GB
-    time   = 6.h
+    resourceLimits = [
+        cpus: 2,
+        memory: '6.GB',
+        time: '6.h'
+    ]
 
     // Input data
     input  = "${projectDir}/assets/samplesheet_test_bam.csv"
