chore: move resourceLimit to process block

--- a/conf/scicomp.config
+++ b/conf/scicomp.config
@@ -17,18 +17,20 @@
 ==========================================================================================
 */
 
+process {
+    // Default resource parameters. Expecting to be overwritten.
+    resourceLimits = [
+        cpus: 16,
+        memory: '128.GB',
+        time: '240.h'
+    ]
+}
+
 params {
   config_profile_description = 'HPC @ CDC'
   config_profile_contact = 'OAMD'
   config_profile_url = 'https://info.biotech.cdc.gov/info/'
   custom_config_version = 'master'
-
-  // Default resource parameters. Expecting to be overwritten.
-  resourceLimits = [
-    cpus: 16,
-    memory: '128.GB',
-    time: '240.h'
-  ]
 }
 
 /*
