--- a/conf/test_iontorrent.config
+++ b/conf/test_iontorrent.config
@@ -10,6 +10,15 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    // Default resource parameters. Expecting to be overwritten.
+    resourceLimits = [
+        cpus: 2,
+        memory: '6.GB',
+        time: '6.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test Iontorrent profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
