--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -10,16 +10,18 @@
 ----------------------------------------------------------------------------------------
 */
 
-params {
-    config_profile_name        = 'Test BAM input'
-    config_profile_description = 'Minimal test dataset to check pipeline function'
-
-    // Limit resources so that this can run on GitHub Actions
+process {
+    // Default resource parameters. Expecting to be overwritten.
     resourceLimits = [
         cpus: 2,
         memory: '6.GB',
         time: '6.h'
     ]
+}
+
+params {
+    config_profile_name        = 'Test BAM input'
+    config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Input data
     input  = "${projectDir}/assets/samplesheet_test_bam.csv"
