--- a/conf/test_illumina.config
+++ b/conf/test_illumina.config
@@ -10,16 +10,18 @@
 ----------------------------------------------------------------------------------------
 */
 
+process {
+    // Default resource parameters. Expecting to be overwritten.
+    resourceLimits = [
+        cpus: 2,
+        memory: '6.GB',
+        time: '6.h'
+    ]
+}
+
 params {
     config_profile_name        = 'Test Illumina profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
-
-    // Limit resources so that this can run on GitHub Actions
-    resourceLimits = [
-        cpus: 2,
-        memory: '4.GB',
-        time: '6.h'
-    ]
 
     // Input data
     input  = "${projectDir}/assets/samplesheet_test_illumina.csv"
